Add SEO metadata and update lab affiliations
Added 'jekyll-seo-tag' plugin and included SEO titles and descriptions to key pages and member profiles for improved search engine optimization.

--- a/_config.yaml
+++ b/_config.yaml
@@ -48,6 +48,7 @@ collections:
 plugins:
   - jekyll-spaceship
   - jekyll-sitemap
+  - jekyll-seo-tag
   - jekyll-redirect-from
   - jekyll-feed
   - jekyll-last-modified-at
