Disable bundler cache and update build config
Set bundler-cache to false in the Ruby setup step and add 'bundle config set frozen false' before building the site. This may address issues with cached dependencies or frozen Gemfile during the build process.

--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -30,7 +30,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.1"
-          bundler-cache: true
+          bundler-cache: false
 
       - name: Get Pages url
         id: pages
@@ -46,6 +46,7 @@ jobs:
 
       - name: Build live version of site
         run: |
+          bundle config set frozen false
           JEKYLL_ENV=production bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path || '' }}"
 
       - name: Commit live site to Pages branch
