--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -30,7 +30,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.1"
-          bundler-cache: true
+          bundler-cache: false
 
       - name: Get Pages url
         id: pages
