Update Ruby setup and add Bundler diagnostics to CI
Sets Bundler version to 2.5.6, enables bundler cache, and adds a diagnostic step to print Bundler and Jekyll versions and check bundle status. This helps with debugging and ensures consistent environment setup in the build workflow.

--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -30,7 +30,15 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.1"
-          bundler-cache: false
+          bundler: "2.5.6"
+          bundler-cache: true
+
+      - name: Bundler diagnostics
+        run: |
+          bundle --version
+          bundle config get frozen || true
+          bundle check || true
+          bundle exec jekyll -v
 
       - name: Get Pages url
         id: pages
