--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -2,12 +2,11 @@
   subtitle:
   group: featured
   link: 
-  description: " "
-  # description: This project aims to characterize how and when computations along a cognitive hierarchy of social information processing (e.g., perception, learning, decision-making, higher-order belief inference) impact social connection and loneliness.
+  description: This project characterizes how and when computations along a cognitive hierarchy of social information processing (e.g., perception, learning, decision-making, higher-order belief inference) impact social connection and loneliness. This project is funded by an NIH Director's Early Independence Award ([1DP5OD037383](https://reporter.nih.gov/project-details/10923384)).
   image: 
   tags:
-    - CONNECTION THROUGH KINDNESS
-    - UNDERSTANDING OTHERS
+    - "connection and prosociality"
+    - understanding others
     - social decision-making
     - computational psychiatry
     - functional neuroimaging
@@ -16,11 +15,11 @@
   subtitle:
   group: featured
   link: 
-  description: " "
+  description: "This project characterizes the neural signatures of shared social inference representations between interacting humans using intracranial electrophysiology."
   image: 
   tags:
-    - UNDERSTANDING OTHERS
-    - UNIQUE BRAINS SHARED WORLD
+    - understanding others
+    - unique brains shared world
     - social inference
     - social interaction
     - synchrony
@@ -30,9 +29,9 @@
   subtitle:
   group: featured
   link: 
-  description: " "
+  description: "This project investigates how people take the perspectives of others in naturalistic social contexts using functional neuroimaging."
   tags:
-    - UNIQUE BRAINS SHARED WORLD
+    - unique brains shared world
     - social inference
     - synchrony
     - functional neuroimaging
@@ -42,11 +41,11 @@
   subtitle:
   group: featured
   link: 
-  description: " "
+  description: "This project investigates individual differences in prosocial and antisocial learning and decision-making using behavioral experiments, computational modeling, and various neural measures."
   image: 
   tags:
-    - CONNECTION THROUGH KINDNESS
-    - UNDERSTANDING OTHERS
+    - "connection and prosociality"
+    - understanding others
     - social decision-making
     - prosocial behavior
     - reinforcement learning
@@ -55,8 +54,8 @@
   subtitle:
   group: featured
   link: 
-  description: " "
+  description: "This project investigates how engaging in prosocial behavior impacts social connection and subjective well-being across different levels of analysis.""
   tags:
-    - CONNECTION THROUGH KINDNESS
+    - "connection and prosociality"
     - prosocial behavior
     - subjective well-being
