--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Build live version of site
         run: |
-          JEKYLL_ENV=production bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path || '' }} --trace"
+          JEKYLL_ENV=production bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path || '' }}"
 
       - name: Commit live site to Pages branch
         uses: JamesIves/github-pages-deploy-action@v4.5.0
