--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -2,8 +2,7 @@
   remove: true
 
 - id: doi:10.31234/osf.io/5jpf7_v1
-  title: Lonelier people feel less empathic despite intact neural empathy responses
-    after meditation training
+  title: Lonelier people feel less empathic despite intact neural empathy responses after meditation training
   authors:
   - Marla Dressel
   - Naomi Michel Nero
@@ -1157,8 +1156,7 @@
     - computational modeling
 
 - id: doi:10.1038/s41467-023-37283-5
-  title: Unselfish traits and social decision-making patterns characterize six populations
-    of real-world extraordinary altruists
+  title: Unselfish traits and social decision-making patterns characterize six populations of real-world extraordinary altruists
   authors:
   - Shawn A. Rhoads
   - Kruti M. Vekaria
