--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -54,7 +54,7 @@
   subtitle:
   group: featured
   link: 
-  image: images/card_SWB.png
+  image: images/card_swb.png
   description: "This project investigates how engaging in prosocial behavior influences feelings of social connection and subjective well-being."
   tags:
     - connection and prosociality
